[package]
description = "Verifies HTTP request signatures from Slack"
authors = ["Denbeigh Stevens <denbeigh@denbeighstevens.com>"]
edition = "2018"
homepage = "https://github.com/denbeigh2000/slack-http-verifier"
documentation = "https://docs.rs/slack-http-verifier"
repository = "https://github.com/denbeigh2000/slack-http-verifier"
license = "MIT"
name = "slack-http-verifier"
version = "0.1.1"
[dependencies]
hex = "0.4"
hmac = "0.12"
http = "0.2"
reqwest = {version = "0.11", features = ["blocking"]}
sha2 = "0.10"
